name:               go-package-updater
version:            0.1.0.0
cabal-version:      >= 1.10
category:           Data, Development, Language, Network, System, Web
license:            MIT
license-file:       LICENSE
author:             Charles Strahan
maintainer:         charles@cstrahan.com
copyright:          Copyright (C) 2015 Charles Strahan
homepage:           http://github.com/cstrahan/go-package-updater
bug-reports:        http://github.com/cstrahan/go-package-updater/issues
build-type:         Simple
-- synopsis:           
-- description:        
extra-source-files:
  .gitignore

source-repository head
  type:     git
  location: git://github.com/cstrahan/go-package-updater.git

executable go-package-updater
  -- default-language: Haskell98
  default-language:    Haskell2010
  build-depends:
      base              >= 4 && < 5
    , parsec
    , hnix
    , ansi-wl-pprint
    , pretty-show
    , uniplate
    , lens
    , data-fix
    , aeson
    , lens-aeson
    , text
    , containers
    , mtl
    , bytestring
    , unordered-containers
    , hashable

  hs-source-dirs: go-package-updater

  if os(osx)
    ghc-options: -optl-headerpad_max_install_names

  ghc-options:
    -O2 -ddump-deriv -ddump-to-file
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -O2

  other-modules:
    Nix.Expr.Lens
    Nix.Expr.Lens.Internal

  hs-source-dirs:   main
  main-is:          Main.hs
  ghc-options:      -O2
